<resources>
    <string name="app_name">Facture</string>
    <string name="amount">Amount</string>
    <string name="_0_00">$0.00</string>
    <string name="province">Province</string>
    <string name="quebec">Quebec</string>
    <string name="ontario">Ontario</string>
    <string name="calculer">Calculer</string>
    <string name="province_flag">province flag</string>
    <string name="total">Total</string>
</resources>